[package]
name = "wgman-core"
version = "0.6.0"
authors = ["Ashley Wulber"]
edition = "2018"
repository = "https://github.com/wash2/wgman-core.git"
license = "Apache-2.0"
description = "core for wgman crate"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnetwork = "0.17"
base64 = "0.13"
# sqlx = { git = "https://github.com/launchbadge/sqlx.git", features = [ "runtime-tokio-rustls", "uuid", "ipnetwork", "postgres" ] } for tokio 1.0
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "uuid", "ipnetwork", "postgres" ] } 
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
